[tool.poetry]
name = "swyo"
version = "0.1.0"
description = ""
authors = ["정승원(SeungWon Jeong)/OnC <seungwon.jeong@wesang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
